src/test/compile-fail/name-clash-nullary.rs
// error-pattern:Declaration of none shadows
import option::*;

fn main() {
  let none: int = 42;
  log(debug, none);
}
